--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
         text-align:center;
     }
 </style>
+<script>
+    function goPage(url){
+        document.location.href = url;
+    }
+</script>
 <h1>book</h1>
 <ol>
-<li onclick="goPage('../sub/채식주의자.html')" style="cursor:pointer;">채식주의자</li>
-<li><a href="./sub/도도.html" title="시메노나기">밤에만 열리는 카페 도도</a></li>
-<li><a href="./sub/어서오세요.html" title="황보름">어서오세요, 휴남동 서점입니다</a></li>
+<li onclick="goPage('../sub/beverage.html')" style="cursor:pointer;">채식주의자</li>
+<li><a href="./sub/cafedodo.html" title="시메노나기">밤에만 열리는 카페 도도</a></li>
+<li><a href="sub/welcome.html" title="황보름">어서오세요, 휴남동 서점입니다</a></li>
 </ol>
 
