--- a/sub/beverage.html
+++ b/sub/beverage.html
@@ -53,13 +53,13 @@
 
     <h1>book</h1>
     <ol>
-      <li><a href="/index.html" >처음으로</a></li>
-      <li><a href="beverage.html" title="한강">채식주의자</a></li>
+      <li><a href="../index.html" >처음으로</a></li>
+      <li><a href="./beverage.html" title="한강">채식주의자</a></li>
       <li>
-        <a href="cafedodo.html" title="시메노나기">밤에만 열리는 카페 도도</a>
+        <a href="./cafedodo.html" title="시메노나기">밤에만 열리는 카페 도도</a>
       </li>
       <li>
-        <a href="welcome.html" title="황보름"
+        <a href="./welcome.html" title="황보름"
           >어서오세요, 휴남동 서점입니다</a
         >
       </li>
