--- a/index.html
+++ b/index.html
@@ -26,4 +26,51 @@
 <li><a href="./sub/cafedodo.html" title="시메노나기">밤에만 열리는 카페 도도</a></li>
 <li><a href="./sub/welcome.html" title="황보름">어서오세요, 휴남동 서점입니다</a></li>
 </ol>
+<div>
+    <form action="#" method="get">
+      <fieldset>
+        <legend>Book name</legend>
+        <p>
+            책이름
+            <select name="book name" id="book name">
+                <optgroup label="책 목록">
+                    <option value="채식주의자">채식주의자</option>
+                    <option value="밤에만 열리는 카페 도도">밤에만 열리는 카페 도도</option>
+                    <option value="어서오세요, 휴남동서점입니다">어서오세요, 휴남동서점입니다</option>
+                </optgroup>
+            </select>
+        </p>
+      </fieldset>
+    </form>
+  </div>
+  <div>
+    <table>
+        <col style="width: 50px;">
+        <col style="width: 250px;">
+        <col style="width: 150;">
+        <caption>책가격</caption>
+        <tr>
+            <th scope="col">번호</th>
+            <th scope="col">책이름</th>
+            <th scope="col">가격</th>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>채식주의자</td>
+            <td>13,500원</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>밤에만 열리는 카페 도도</td>
+            <td>15,300원</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>어서오세요, 휴남동서점입니다</td>
+            <td>13,500원</td>
+        </tr>
+    </table>
+  </div>
+</body>
+</html>
 
