--- a/sub/beverage.html
+++ b/sub/beverage.html
@@ -102,7 +102,7 @@
           </p>
           <p class="desc1">
             <lable for="desc">내용
-              <textarea id="desc" name="desc"></textarea>
+              <input type=text placeholder="느낀점을 입력해 주세요." textarea id="desc" name="desc"></textarea>
             </lable>
           </p>
         </fieldset>
