--- a/index.html
+++ b/index.html
@@ -71,6 +71,27 @@
         </tr>
     </table>
   </div>
+  <form action="#">
+    <fieldset>
+        <legend>소셜 로그인</legend>
+        <button type="button">
+            <img src="google.png" alt="구글 로고" style="width: 20px;">
+            log in with google
+        </button>
+    </fieldset>
+    <fieldset>
+        <legend>일반 로그인</legend>
+        <label for="username">
+            <input type="text" id="username" placeholder="Username">
+        </label>
+        <label for="password">
+            <input type="password" id="password" name="password" placeholder="Password">
+        </label>
+        <button type="submit">
+            Login
+        </button>
+    </fieldset>
+  </form>
 </body>
 </html>
 
